--- a/test/testApn/Server-simulate-APN/README
+++ b/test/testApn/Server-simulate-APN/README
@@ -1,1 +1,3 @@
 This server sample was taken from : https://github.com/tikonen/blog/tree/master/apn-test-server
+
+For more info: http://bravenewmethod.wordpress.com/2013/04/20/test-server-for-apple-push-notification-and-feedback-integration/
